@@ -1,5 +1,7 @@
 2006-02-22  Tim Waugh  <twaugh@redhat.com>
 
+	* cupsmodule.c (initcups): Added printer states constants.
+
 	* cupsconnection.c: More consistent error handling.
 	(do_printer_request): Fixed ipp_t leak.
 	(Connection_addPrinter): Likewise.
